[metadata]
name = crypto-jps
version = 1.0
description = Cryptography
long_description =
author = Jorge Perez
author_email =
url =
keywords =
license = BSD
classifiers =

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    colorama;platform_system=="Windows"
python_requires = >= 3.6

[options.extras_require]
all =
    pytest

[options.entry_points]
console_scripts =
    qr = qrcode.console_scripts:main

[tool:pytest]
filterwarnings = module